# LaneSegNet

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  DEVELOPMENT_PAUSE_NOTICE.md  DOCKER_BUILD_STATUS.md  DOCKER_VALIDATION_SUCCESS.md  Dockerfile  GEMINI.md  IMPLEMENTATION_PLAN.md  MODEL_PERFORMANCE_ASSESSMENT.md  NEXT_SESSION_PROMPT.md  PHASE2_PERFORMANCE_REPORT.md  PHASE3_SESSION_PROMPT.md  PHASE_2_5_COMPLETION_SUMMARY.md  PHASE_3_1_NEXT_SESSION.md  PHASE_3_PLANNING.md  PROJECT_STATUS_CURRENT.md  PROJECT_STATUS_FINAL.md  PROJECT_STATUS_UPDATE.md  README.md  RESEARCH_PROMPT.md  SYSTEMATIC_PIPELINE_REVIEW_PLAN.md  TESTING.md  check_versions.py  contaminated_model_analysis_report.md  create_ael_masks.py  create_weights_dir.sh  debug_local_imagery.py  fine_tune_lane_model.py  pyproject.toml  pytest.ini  requirements.txt  run_continue_finetuning.bat  run_diagnostics.bat  run_emergency_fix.bat  run_full_training.bat  run_full_training_fixed.bat  run_hyperparameter_sweep.bat  run_phase4a.bat  (+7 more)
.claude/: settings.local.json
app/: coordinate_transform.py  enhanced_post_processing.py  imagery_acquisition.py  inference.py  main.py  model_loader.py  schemas.py
archived_batch_files_20250724_094554/: run_backup_model_testing.bat  run_combined_training.bat  run_combined_training_simple.bat  run_comprehensive_audit.bat  run_comprehensive_validation.bat  run_data_collection.bat  run_finetune_premium.bat  run_finetune_simple.bat  run_full_dataset_training.bat  run_full_pipeline.bat  run_optimized_premium_training.bat  run_premium_gpu.bat  run_proper_finetune.bat  test_models_with_progress.bat
archived_cleanup_tools_20250724_100345/: CLEANUP_TOOLS_MANIFEST.txt  check_ssl_readiness.py  cleanup_batch_files.py  cleanup_data_directory.py  cleanup_docs.py  cleanup_scripts.py  final_root_cleanup.py  quick_cleanup.py
archived_data_20250724_100419/: DATA_ARCHIVE_MANIFEST.txt  data_directory_cleanup.py
archived_files_20250724_094250/: ADVANCED_TECHNIQUES_PLAN.md  OVERFITTING_FIX_PLAN.md  REVISED_ADVANCED_TECHNIQUES_PLAN.md  audit_report_20250723_113156.json  backup_model_comparison_20250723_113826.json  comprehensive_validation_results_20250723_112903.json  debug_iou_issue.py  full_dataset_report.json
archived_scripts/: 50%  run_balanced_training.bat  run_complete_premium_training.bat  run_gpu_training.bat  run_ultra_fast_gpu.bat  test_gpu_training.bat
configs/: ael_swin_upernet_training.py  global_config.py
data/: Aucamvile.geojson  Cairo.geojson  Glasgow.geojson  Gopeng.geojson  Nevada.geojson  SanPaulo.geojson  Valencia.geojson  Valencia.geojson.qgz  labeled_dataset.py  premium_dataset.py  test_data.json  train_data.json  unlabeled_dataset.py  val_data.json
docs/: FILE_ORGANIZATION.md  PRODUCTION_DEPLOYMENT.md
docs_archived_20250724_094727/: DOCS_ARCHIVE_MANIFEST.txt
local_aerial_tests/: test_results.json
scripts/: analyze_loss_behavior.py  audit_configurations.py  collect_unlabeled_data.py  comprehensive_model_validation.py  configurable_finetuning.py  consolidate_unlabeled_data.py  debug_training_issues.py  emergency_training_fix.py  enhanced_post_processing.py  evaluate_final.py  fixed_run_finetuning.py  full_dataset_training.py  hyperparameter_sweep.py  improved_loss_function.py  knowledge_distillation.py  monitor_training.py  (+20 more)
(+8011 files in other folders)
